fix aligning in weather

--- a/weather/style.css
+++ b/weather/style.css
@@ -3,6 +3,7 @@ body {
     font-size: 20px;
     color: #ffffff;
     margin: auto;
+    font-family: 'Koh Santepheap', cursive;
 }
 
 #main {
@@ -17,7 +18,7 @@ body {
     /* justify-content: center; */
     align-items: center;
     /* border: 1px solid black; */
-    margin-top: 20px;
+    margin: 20px;
 }
 
 .block {
@@ -26,6 +27,10 @@ body {
     /* justify-content: center; */
     align-items: center;
     /* border: 1px solid black; */
+}
+
+h1 {
+    text-align: center;
 }
 
 #input {
@@ -55,4 +60,5 @@ li {
     /* border: 1px solid black; */
     margin: 10px;
     list-style-type: none;
+    text-align: center;
 }
